Fixed email overflow-new

--- a/src/App.css
+++ b/src/App.css
@@ -817,7 +817,7 @@ footer {
 .userInfoDiv {
   text-align: center;
   color: white;
-  font-size: 1vw;
+  font-size: 0.9vw;
   overflow-x: hidden;
 }
 .profilePic {
